UtahLiveDataTest/src/objects/r_obj__c.object
<CustomObject>
    <description>This is created for the Program coding block for USBE.</description>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>OBJ_CD+FY</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>26</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>FiscalYear__r.FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Objects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OBJ_CD__c</fullName>
        <label>Code From FINET</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBJ_SH_NM__c</fullName>
        <label>OBJ NAME</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Object</label>
    <nameField>
        <label>OBJ CODE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>